# kqsnake

./: .gitignore  CMakeLists.txt  KQsnakeui.rc  configdialog.cpp  configdialog.h  configdialog.ui  configpagefirst.cpp  configpagefirst.h  configpagefirst.ui  configpagesecond.cpp  configpagesecond.h  configpagesecond.ui  constants.h  gameobject.cpp  gameobject.h  images.qrc  kqsnake.1  kqsnake.de.1  kqsnake.kcfg  kqsnake.kcfgc  kqsnake.qrc  kqsnake.ru.1  kqsnakeui.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_de.ts  mainwindow_ru.ts  myslider.cpp  myslider.h  org.kde.kqsnake.appdata.xml  snake.cpp  snake.h  snakegame.cpp  snakegame.h  snapcraft.yaml  version.h
desktop/: kqsnake.desktop  org.kde.kqsnake.desktop
po/de/: kqsnake.po
po/de/docs/kqsnake/: index.docbook
po/en/docs/kqsnake/: index.docbook
po/ru/: kqsnake.po
po/ru/docs/kqsnake/: index.docbook
